[FIX] space between grid on /visi-misi

--- a/resources/views/about-us/vision-mission/index.edge
+++ b/resources/views/about-us/vision-mission/index.edge
@@ -17,9 +17,9 @@
             @!component('partials/heading-section', {
                 text: 'Misi', addClass: 'tracking-widest'
             })
-            <div class="grid grid-cols-3 gap-x-8">
+            <div class="grid grid-cols-3 gap-8">
                 @each(mission in missions)
-                    <div class="bg-gradient-purple-red flex text-white 
+                    <div class="bg-gradient-purple-red flex text-white
                     px-6 py-10 rounded items-center">
                         <span class="mr-6 font-bold text-3xl">
                             {{ mission.order_number }}
