[UPDATE] remove logo on header-title

--- a/resources/views/event/upcoming.edge
+++ b/resources/views/event/upcoming.edge
@@ -3,8 +3,7 @@
 @section('body')
     <div class="lg:ml-14">
         @!component('partials/header-title', {
-            title: 'Program Kerja Mardhika',
-            logo: contentPage.logo
+            title: 'Program Kerja Mardhika'
         })
     </div>
     <section class="py-10">
