[UPDATE] contact us content seeder

--- a/resources/views/contact-us/index.edge
+++ b/resources/views/contact-us/index.edge
@@ -6,7 +6,7 @@
     })
     <section class="bg-orange-primary text-white py-10">
         <div class="container content-from-wysiwyg">
-            {{{  contentPage.desc_page }}}
+            {{{ nl2br(contentPage.desc_page) }}}
         </div>
     </section>
     <section id="our-social-media" class="py-14">
